# geoscreens

./: .envrc  .gitignore  LICENSE  README.md  constraints.txt  geoscreens.code-workspace  manifest  pyproject.toml  requirements.txt  setup.cfg  setup.py
configs/: default.yaml  mmdet.faster_rcnn.resnest.yaml  mmdet.retinanet.resnext101_32x4d_fpn_2x.yaml  mmdet.vfnet.yaml  mmdet.yolof.yaml  ross.efficientdet.yaml  torchvision.retinanet.yaml  ultralytics.yolo.yaml
datasets/geoscreens_000/: geoscreens_000.json
datasets/geoscreens_001/: geoscreens_001.json
datasets/geoscreens_008/: geoscreens_008.json
datasets/geoscreens_009/: geoscreens_009.json
datasets/geoscreens_010/: geoscreens_010.json
datasets/geoscreens_011/: geoscreens_011.json
datasets/geoscreens_012/: geoscreens_012.json  geoscreens_012_train.json  geoscreens_012_val.json
datasets/geoscreens_013/: geoscreens_013_train.json  geoscreens_013_val.json
datasets/geoscreens_014/: geoscreens_014_train.json  geoscreens_014_val.json
docs/: project_structure.md  ui_elements.md
geoscreens/: config.py  consts.py  geo_data.py  geo_utils.py  inference.py  models.py  modules.py  pseudolabels.py  utils.py
geoscreens/data/: __init__.py  metadata.py  splitting.py
geoscreens/labelstudio/: __init__.py  converter.py  core.py  pseudolabels.py
geoscreens/video_seg/: __init__.py  core.py  ground_truth.py  uirules.py
notebooks/: Untitled.ipynb  annotating.ipynb  check_segmentations.ipynb  class_counts.ipynb  evaluations.ipynb  game_states.ipynb  hmm.ipynb  im2clue-asr_text.ipynb  im2clue-gptj.ipynb  img_sizes.ipynb  ingame_frames_demo.ipynb  label-studio.ipynb  object_size_inspection.ipynb  predict.ipynb  segment_vid.ipynb  train_val_split.ipynb  url_ocr.ipynb  view_annoations.ipynb
notebooks/clipft/: clip_sample_gen.ipynb  clip_samples.ipynb  ingame_frames_dataset_gen.ipynb  ingame_frames_demo.ipynb
notebooks/detect/: scrub_bad_detection_files.ipynb  video_clustering_by_ui_detections.ipynb
notebooks/game_locations/: initial_frames.ipynb
notebooks/segment/: check_segmentations.ipynb  game_states.ipynb
scripts/: copy_vids.sh  create_env.sh  get_anns_and_train.sh  get_anns_and_train2.sh  get_video_detection.sh  labelstudio_export.sh  ls_pipeline.sh  serve_images.sh  serve_videos.sh  start_labelstudio.sh  sweep.sh  train_geo.py
sweeps/: example.yaml  frcnn_sweep.yaml  frcnn_sweep_anchors.yaml
tools/: clip_embeddings.py  extract_video_frames.py  generate_pseudo_labels.py  get_frames.py  get_urls.py  get_video_detections.py  segment_video.py  train_geo.py
